{
    "name": "InputMaster",
    "maps": [
        {
            "name": "MainPlayer",
            "id": "a6ea3eac-0c5a-4842-9aac-70c6a4ccaa79",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7aaa9120-c9fa-43d4-aed7-92966d0978c2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4407e48b-aa63-4525-848e-b270e38cb066",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateCamera",
                    "type": "Button",
                    "id": "d5c73c2d-e755-4c53-915f-6ee52758b8e2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shield",
                    "type": "Button",
                    "id": "631e6d09-2adc-44ea-9d69-2db9bb612da3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateShield",
                    "type": "Value",
                    "id": "867cf2dd-f70a-43b2-905b-660305a3c122",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "cce5b003-26d3-49ab-9b16-974194cedf02",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a1c20bb3-9cbc-43a4-807c-f182a0d71128",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a5e28f0c-3044-41e4-b2cb-b0bc8b2a80ef",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6c98e2c7-1a48-4010-a3d3-8a0c13dde137",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "53cab6cb-a40c-4476-804f-2315ead4220f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "560df547-1fcf-411f-b17e-c952b27a070e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9d002ba3-c436-4421-a4d0-3a88789ebe69",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "45fa19b8-35dd-43c9-8d21-bc307f592836",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2c15d55b-04e6-4c3b-a9f1-8d3afa50905f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5a5d9e62-b8e1-4f1a-b679-9c681f9d2a7e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftStick",
                    "id": "294b8aa6-ffb3-405c-be1e-d87d467e18ce",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f2e90882-ad4d-40b4-a097-d9a41b41d4ae",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "23fb62dc-2061-42d0-a45e-cc839b4eaa5e",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "85d72f50-58d8-4ee2-a438-591cd66b00d5",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1cc60563-4f91-4f0b-9e75-17836b625981",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "DPad",
                    "id": "3d4db234-9325-4d72-b73f-2f4accad5aec",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a7ad045f-95dd-489e-a12d-05d134d89809",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f0170d5b-8a75-48b7-8801-eae78a2089dd",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "42edd642-6b25-4274-84b5-e68fc885a97d",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "847b0f65-74e8-45a9-8544-349f97be7c85",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9f308882-fbea-490f-b3a8-e362232a2d43",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "845dec90-2121-44f5-b0f6-8abebf85b0c4",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Q/E",
                    "id": "814e4a28-ebeb-4d77-88f1-7133da13848a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b7f6a2d0-bb0d-43f3-a287-2c9309716d81",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "58e1f660-4162-40fd-93a6-0f81eb9ae5b6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Shoulders",
                    "id": "a5fa85a0-d8d6-455d-851a-6dfb9e5712ea",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6b44e4eb-fbc9-4f52-85df-9e6c76b6611c",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9ccd63ea-0d9f-4293-8dd1-50898d42382f",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "16758731-cc3a-4e5b-96ed-8db08cc86bd4",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Shield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79698eb8-4e7b-48c1-87fd-bf9fed8bb01c",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Shield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "IJKL",
                    "id": "8420dc17-3b7e-4306-b722-f66c10dbd9a2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShield",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "50b51cb8-bc0a-4dd3-bdf2-ad4cf3cc869d",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "RotateShield",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "84ceaebe-40f3-4209-b9cf-bbc9620de96c",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "RotateShield",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b23b7979-e709-4bb8-844a-f88cd3c48d06",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "RotateShield",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "71e2a5a8-dbf4-4a46-8d77-d92ca8602325",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "RotateShield",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "RightStick",
                    "id": "ac5eea0b-7a34-4417-8bef-15e4423adee6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShield",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "13c93dc4-a3d3-469d-bea6-f97e793c747a",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RotateShield",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0420434f-cad6-40e9-b764-7add3e1140b8",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RotateShield",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3cbe95d6-bfb4-450e-9619-2f6426658d55",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RotateShield",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bbb10387-4a7e-462a-8610-dd4be61aa34b",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RotateShield",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "VRPlayer",
            "id": "e6aaaae2-b461-485d-9bb4-92d268fa34d0",
            "actions": [
                {
                    "name": "TriggerRight",
                    "type": "Value",
                    "id": "b2150969-83b8-48c7-bc8e-03b34e7f87d9",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerLeft",
                    "type": "Value",
                    "id": "772aa349-0738-404b-b37c-34847b03d2a4",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftPosition",
                    "type": "Button",
                    "id": "a1e93b21-43b9-4d4c-9c55-f486fbde98bb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftRotation",
                    "type": "Button",
                    "id": "eef00d9d-555f-471b-80d5-642e4ded4aac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightPosition",
                    "type": "Button",
                    "id": "fe59944a-7134-4165-9eea-41662e53fc2b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightRotation",
                    "type": "Value",
                    "id": "3364ad72-e2a5-46d4-8899-0d3128bf5926",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b8db92d0-ddf6-4836-82f2-877946480083",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74137842-09b1-4862-95ba-032d9a36b8da",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba7c87c2-61e0-4c7e-a4cd-a81b1e9cc119",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a0f1dc6-f7eb-4411-9566-ba827534389e",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "006d31c1-e130-40f5-b544-29f3e0d0624c",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32b3a018-17d8-4611-9eb2-c526e4cd07cf",
                    "path": "<XRController>{RightHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}